added Organism Class implents Icomparable to sort for it's fitness
added Population Handlers functions include
createInitialPopulation
rankPopulation
matePopulation

added Mating Operators include
crossover
mutate
elitism

Selection algorithm section is still empty

--- a/ImageHiding/ImageHiding/ImageHiding.csproj
+++ b/ImageHiding/ImageHiding/ImageHiding.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Decrypt.cs" />
     <Compile Include="Encrypt.cs" />
     <Compile Include="FastBitmap.cs" />
+    <Compile Include="GeneticAlgorithm\GeneticAlgorithm.cs" />
+    <Compile Include="GeneticAlgorithm\Organism.cs" />
     <Compile Include="GUIForm.cs">
       <SubType>Form</SubType>
     </Compile>
